# conan-libpqxx

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build.py  conanfile.py
.ci/: install.sh
.travis/: install.sh
test_package/: CMakeLists.txt  conanfile.py  main.cpp
